--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="apple-touch-icon" href="images/ziggo_logo.png">
   <meta name="msapplication-TileImage" content="images/ziggo_logo.png">
   <meta name="msapplication-TileColor" content="#2F3BA2">
-  <link rel="stylesheet" type="text/css" href="styles/grid.css">
+  <link rel="stylesheet" type="text/css" href="/grid.css">
   <style>
     
   </style>
@@ -52,7 +52,7 @@
     </svg>
   </div>
 
-  <script src="scripts/app.js"></script>
+  <script src="/app.js"></script>
   
 </body>
 </html>
