--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </span>
           <nav class="nav-icon">
               <button class="hamburger-button" role="tab" aria-expanded="false" >
-                <div class="nav-icon-bars"><span></span><span></span><span></span><span></span></div>
+                <div class="nav-icon-bars"><span></span><span></span><span></span></div>
               </button>
           </nav>
       </div>
