--- a/index.html
+++ b/index.html
@@ -22,13 +22,9 @@
   <header>
     <div class="header-wrapper">
       <div class="header-title">
-          <span class="section-title">PWA</span>
-          <span class="chapter-title">
-            <input id="turn-on-notification" type="checkbox" hidden="hidden" class="custom__input" data-checked="false">
-            <label for="turn-on-notification" class="custom__checkbox"></label>
-            <button class="no--select send-push" disabled="true">Send Push Notification</button>
-            <span class="title-separator"></span> 
-          </span>
+          <a href="https://www.ziggo.nl">
+            <img src="https://aman02deep.github.io/pwa-sample/ziggo_logo.png" alt="Home" style="height: 24px;margin-top: 5px;">
+          </a>
           <nav class="nav-icon">
               <button class="hamburger-button" role="tab" aria-expanded="false" >
                 <div class="nav-icon-bars"><span></span><span></span><span></span></div>
