--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <header>
     <div class="header-wrapper">
       <div class="header-title">
-          <a href="https://www.ziggo.nl">
-            <img src="https://aman02deep.github.io/pwa-sample/ziggo_logo.png" alt="Home" style="height: 24px;margin-top: 5px;">
+          <a class="logo" href="https://www.ziggo.nl">
+            <img src="https://aman02deep.github.io/pwa-sample/ziggo_logo.png" alt="Home" style="height: 24px;">
           </a>
           <nav class="nav-icon">
               <button class="hamburger-button" role="tab" aria-expanded="false" >
