--- a/index.html
+++ b/index.html
@@ -50,7 +50,22 @@
       <circle id="spinner" cx="16" cy="16" r="14" fill="none"></circle>
     </svg>
   </div>
-
+  
+  <!-- this code is to open mask and menu onclick of menu-->
+  <div class="nav-mobile__close"></div>
+<div class="nav-mobile__content">
+    <div class="nav-mobile__search">
+     Search
+    </div>
+	<div class="nav-mobile__menu__container">
+		<ul class="nav-mobile__menu">
+			<li><a target="_self" href="/films">Movies</a></li>
+			<li><a target="_self" href="/bioscopen">Cinemas</a></li>
+			<li><a target="_self" href="/specials-en-events">Events &amp; Specials</a></li>
+			<li><a target="_self" href="/producten/overzicht">Products</a></li>
+		</ul>
+	</div>
+</div>
   <script src="app.js"></script>
 </body>
 </html>
