--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img src="https://aman02deep.github.io/pwa-sample/ziggo_logo.png" alt="Home" style="height: 30px;">
           </a>
           <nav class="nav-icon">
-              <button class="hamburger-button" role="tab" aria-expanded="false" >
+              <button id="hamburger-button" class="hamburger-button" role="tab" aria-expanded="false" >
                 <div class="nav-icon-bars"><span></span><span></span><span></span></div>
               </button>
           </nav>
