--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </div>
   
   <!-- this code is to open mask and menu onclick of menu-->
-  <div class="nav-mobile__close"></div>
+  <div class="nav-mobile__close" id="nav-mobile__close" ></div>
 <div class="nav-mobile__content">
     <div class="nav-mobile__search">
      Search
