--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
   <div class="nav-mobile__close" id="nav-mobile__close" ></div>
 <div class="nav-mobile__content">
     <div class="nav-mobile__search">
-     Search
+    <input type="search" name="q" id="SearchInputMobile" placeholder="Search">
+        <button class="nav-mobile__search__button" title="Zoeken"></button>
+        <button title="Zoeken" class="nav-mobile__search__clear"></button>
     </div>
 	<div class="nav-mobile__menu__container">
 		<ul class="nav-mobile__menu">
