--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="nav-icon-bars"><span></span><span></span><span></span></div>
               </button>
           </nav>
-          <a class="getApp" href="javascript:void(0)" style="float: right;margin-right: 20px;">
+          <a id="add-to-home" class="getApp" href="javascript:void(0)" style="float: right;margin-right: 20px;">
             <img src="https://aman02deep.github.io/pwa-sample/favicon.ico" alt="Home" style="height: 30px;">
           </a>
       </div>
