--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </div>
 
 <!-- mask for add to home screen icon -->
-<section class="record-view js-record-view record-view--visible">
+<section id="add-to-thome-overlay" class="record-view js-record-view">
       <div class="record-view__panel">
         <div class="record-view__panel-title">Record a new memo</div>
         <div class="record-view__panel-mic">
