--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <!-- mask for add to home screen icon -->
 <section id="add-to-thome-overlay" class="">
       <div class="record-view__panel">
-        <div class="record-view__panel-title">Record a new memo</div>
+        <div class="record-view__panel-title">Add to home</div>
         <div class="record-view__panel-mic">
           <canvas class="record-view__volume-readout js-volume-readout" width="4" height="67"></canvas>
         </div>
