--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="record-view__panel">
         <div class="record-view__panel-title">Add to home</div>
         <div class="record-view__panel-mic">
-          <canvas class="record-view__volume-readout js-volume-readout" width="4" height="67"></canvas>
+       		<img src="https://aman02deep.github.io/pwa-sample/favicon.ico" alt="Home" style="height: 50px;margin-left: 41%;">
         </div>
 
         <button tabindex="1" class="record-view__record-start-btn js-record-start-btn">Record</button>
