--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
 	<div class="nav-mobile__menu__container">
 		<ul class="nav-mobile__menu">
-			<li><a target="_self" href="/films">Movies</a></li>
+			<li><a target="_self" href="/movies.html">Movies</a></li>
 			<li><a target="_self" href="/bioscopen">Cinemas</a></li>
 			<li><a target="_self" href="/specials-en-events">Events &amp; Specials</a></li>
 			<li><a target="_self" href="/producten/overzicht">Products</a></li>
