--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <header>
     <div class="header-wrapper">
       <div class="header-title">
-          <a class="logo" href="https://www.ziggo.nl">
-            <img src="https://aman02deep.github.io/pwa-sample/ziggo_logo.png" alt="Home" style="height: 30px;">
+          <a class="logo" href="/pwa-sample">
+            <img src="/pwa-sample/ziggo_logo.png" alt="Home" style="height: 30px;">
           </a>
           <nav class="nav-icon">
               <button id="hamburger-button" class="hamburger-button" role="tab" aria-expanded="false" >
@@ -31,7 +31,7 @@
               </button>
           </nav>
           <a id="add-to-home" class="getApp" href="javascript:void(0)" style="float: right;margin-right: 20px;">
-            <img src="https://aman02deep.github.io/pwa-sample/favicon.ico" alt="Home" style="height: 30px;">
+            <img src="/pwa-sample/favicon.ico" alt="Home" style="height: 30px;">
           </a>
       </div>
     </div>
@@ -64,32 +64,23 @@
     </div>
 	<div class="nav-mobile__menu__container">
 		<ul class="nav-mobile__menu">
-			<li><a target="_self" href="/movies.html">Movies</a></li>
-			<li><a target="_self" href="/bioscopen">Cinemas</a></li>
-			<li><a target="_self" href="/specials-en-events">Events &amp; Specials</a></li>
-			<li><a target="_self" href="/producten/overzicht">Products</a></li>
+			<li><a target="_self" href="movies.html">All Movies</a></li>
+			<li><a target="_self" href="watch-list.html">Favorite</a></li>
 		</ul>
 	</div>
 </div>
 
 <!-- mask for add to home screen icon -->
 <section id="add-to-thome-overlay" class="">
-      <div class="record-view__panel">
-        <div class="record-view__panel-title">Add to home</div>
-        <div class="record-view__panel-mic">
-       		<img src="https://aman02deep.github.io/pwa-sample/favicon.ico" alt="Home" style="height: 50px;margin-left: 41%;">
-        </div>
-
-        <button tabindex="1" class="record-view__record-start-btn js-record-start-btn">Record</button>
-        <button tabindex="-1" class="record-view__record-stop-btn js-record-stop-btn" disabled="">Stop recording</button>
-
-        <p class="record-view__warning" style="display: none;">Please note: 1 minute of recording takes up ~10MB disk space. <a class="record-view__warning-link" target="_blank" href="https://aerotwist.com/blog/voice-memos/#codecs">Read why</a>.</p>
-
-        <button tabindex="-1" class="record-view__record-cancel-btn js-record-cancel-btn">Cancel</button>
-
-      </div>
-    </section>
+	<div class="record-view__panel">
+        	<div class="record-view__panel-title">Add to home</div>
+		<div class="record-view__panel-mic">
+			<img src="/pwa-sample/favicon.ico" alt="Home" style="height: 50px;margin-left: 41%;">
+		</div>
+        	<button tabindex="-1" class="record-view__record-cancel-btn js-record-cancel-btn">Cancel</button>
+	</div>
+</section>
     
-  <script src="app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
