--- a/index.html
+++ b/index.html
@@ -38,12 +38,91 @@
   </header>
 
   <ul id="rig" class="main" hidden>
-    <li class="card cardTemplate" hidden>
+    <li class="card" style="width: 100%;">
+        <a class="rig-cell" href="#" style="box-shadow: none; float: left; padding: 0px; ">
+               <h3 class="movie-name" style=" font-weight: 600; ">Myprime Movies</h3>
+        </a>
+    </li>
+    <li class="card">
         <a class="rig-cell" href="#">
-          <div class="city-key" hidden></div>
-          <span class="image-tag"></span>
-          <h3 class="movie-name">Responsive Grid</h3>
-          <div class="movie-year">HORROR, 2008</div>
+          <div class="city-key" hidden=""></div>
+          <span class="image-tag"><img src="https://static-images.horizon.tv/nl-static-images/676/171/MP_HZ_NL_Moon_HD.jpg" class="rig-img"></span>
+          <h3 class="movie-name">Moon (HD)</h3>
+          <div class="movie-year">2009</div>
+        </a>
+    </li>
+    <li class="card">
+        <a class="rig-cell" href="#">
+          <div class="city-key" hidden=""></div>
+          <span class="image-tag"><img src="https://static-images.horizon.tv/nl-static-images/676/171/MP_HZ_NL_Moon_HD.jpg" class="rig-img"></span>
+          <h3 class="movie-name">Moon (HD)</h3>
+          <div class="movie-year">2009</div>
+        </a>
+    </li>
+    <li class="card">
+        <a class="rig-cell" href="#">
+          <div class="city-key" hidden=""></div>
+          <span class="image-tag"><img src="https://static-images.horizon.tv/nl-static-images/676/171/MP_HZ_NL_Moon_HD.jpg" class="rig-img"></span>
+          <h3 class="movie-name">Moon (HD)</h3>
+          <div class="movie-year">2009</div>
+        </a>
+    </li>
+    <li class="card" style="width: 100%;">
+        <a class="rig-cell" href="#" style="box-shadow: none; float: left; padding: 0px; ">
+               <h3 class="movie-name" style=" font-weight: 600; ">Myprime Series</h3>
+        </a>
+    </li>
+    <li class="card">
+        <a class="rig-cell" href="#">
+          <div class="city-key" hidden=""></div>
+          <span class="image-tag"><img src="https://static-images.horizon.tv/nl-static-images/676/171/MP_HZ_NL_Moon_HD.jpg" class="rig-img"></span>
+          <h3 class="movie-name">Moon (HD)</h3>
+          <div class="movie-year">2009</div>
+        </a>
+    </li>
+    <li class="card">
+        <a class="rig-cell" href="#">
+          <div class="city-key" hidden=""></div>
+          <span class="image-tag"><img src="https://static-images.horizon.tv/nl-static-images/676/171/MP_HZ_NL_Moon_HD.jpg" class="rig-img"></span>
+          <h3 class="movie-name">Moon (HD)</h3>
+          <div class="movie-year">2009</div>
+        </a>
+    </li>
+    <li class="card">
+        <a class="rig-cell" href="#">
+          <div class="city-key" hidden=""></div>
+          <span class="image-tag"><img src="https://static-images.horizon.tv/nl-static-images/676/171/MP_HZ_NL_Moon_HD.jpg" class="rig-img"></span>
+          <h3 class="movie-name">Moon (HD)</h3>
+          <div class="movie-year">2009</div>
+        </a>
+    </li>
+    <li class="card" style="width: 100%;">
+        <a class="rig-cell" href="#" style="box-shadow: none; float: left; padding: 0px; ">
+               <h3 class="movie-name" style=" font-weight: 600; ">Myprime kids</h3>
+        </a>
+    </li>
+    <li class="card">
+        <a class="rig-cell" href="#">
+          <div class="city-key" hidden=""></div>
+          <span class="image-tag"><img src="https://static-images.horizon.tv/nl-static-images/676/171/MP_HZ_NL_Moon_HD.jpg" class="rig-img"></span>
+          <h3 class="movie-name">Moon (HD)</h3>
+          <div class="movie-year">2009</div>
+        </a>
+    </li>
+    <li class="card">
+        <a class="rig-cell" href="#">
+          <div class="city-key" hidden=""></div>
+          <span class="image-tag"><img src="https://static-images.horizon.tv/nl-static-images/676/171/MP_HZ_NL_Moon_HD.jpg" class="rig-img"></span>
+          <h3 class="movie-name">Moon (HD)</h3>
+          <div class="movie-year">2009</div>
+        </a>
+    </li>
+    <li class="card">
+        <a class="rig-cell" href="#">
+          <div class="city-key" hidden=""></div>
+          <span class="image-tag"><img src="https://static-images.horizon.tv/nl-static-images/676/171/MP_HZ_NL_Moon_HD.jpg" class="rig-img"></span>
+          <h3 class="movie-name">Moon (HD)</h3>
+          <div class="movie-year">2009</div>
         </a>
     </li>
   </ul>
