--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <li class="card">
         <a class="rig-cell" href="#">
           <div class="city-key" hidden=""></div>
-          <span class="image-tag"><img src="https://static-images.horizon.tv/nl-static-images/55/3/400027618_310x175_583100484159.jpg" class="rig-img"></span>
+          <span class="image-tag"><img src="https://wp1-images-nl-dynamic.horizon.tv/Posters/c93b8804-7647-41b2-9553-4929fa6881f4-boxcover.jpg" class="rig-img"></span>
           <h3 class="movie-name">Abandoned, The</h3>
           <div class="movie-year">2006</div>
         </a>
