--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 <script src="app.js"></script>
 <script>
 function highlight(elem) {
-	console.log(elem);
+	console.log(elem.querySelector('.json').textContent);
     //elem.style.backgroundColor='yellow'
     //alert(elem.className)
     //elem.style.backgroundColor = ''
