--- a/index.html
+++ b/index.html
@@ -160,6 +160,16 @@
         	<button tabindex="-1" class="record-view__record-cancel-btn js-record-cancel-btn">Cancel</button>
 	</div>
 </section>
+<!-- movie details -->
+<section id="details-overlay" class="">
+	<div class="record-view__panel">
+        	<div class="record-view__panel-title">Add to home</div>
+		<div class="record-view__panel-mic">
+			<img src="/pwa-sample/favicon.ico" alt="Home" style="height: 50px;margin-left: 41%;">
+		</div>
+        	<button tabindex="-1" class="record-view__record-cancel-btn js-record-cancel-btn">Cancel</button>
+	</div>
+</section>
     
 <script src="app.js"></script>
 <script>
