--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 </section>
 <!-- movie details -->
 <section id="details-overlay" class="">
-	<div class="record-view__panel">
+	<div class="record-view__panel" style="max-height: none;max-width: none;">
         	<div class="record-view__panel-title">Add to home</div>
 		<div class="record-view__panel-mic">
 			<img src="/pwa-sample/favicon.ico" alt="Home" style="height: 50px;margin-left: 41%;">
