--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <script src="app.js"></script>
 <script>
 function highlight(elem) {
-	document.getElementById('details-overlay').className = 'record-view js-record-view record-view--visible';
+	document.getElementById('details-overlay').className = 'record-view record-view--visible';
 	console.log(elem.querySelector('.json').textContent);
     //elem.style.backgroundColor='yellow'
     //alert(elem.className)
