--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
 <script src="app.js"></script>
 <script>
-$(document).on('click', '.addproduct', function () {
-    console.log("aman1");
+$(".rig-cell").click(function(){
+ console.log("aman1");
 });
 	
 function highlight(elem) {
