--- a/index.html
+++ b/index.html
@@ -174,8 +174,11 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
 <script src="app.js"></script>
 <script>
-$(".rig-cell, .image-tag, .rig-img, .movie-name, .movie-year").click(function(){
+$(".rig-img, .movie-name").click(function(){
  console.log("aman1");
+});
+$(".movie-name").click(function(){
+ console.log("aman2");
 });
 	
 function highlight(elem) {
