--- a/index.html
+++ b/index.html
@@ -174,18 +174,18 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
 <script src="app.js"></script>
 <script>
-$(".rig-img, .movie-name").click(function(){
+$(".rig-img").click(function(){
  console.log("aman1");
 });
 $(".movie-name").click(function(){
  console.log("aman2");
 });
+$(".image-tag").click(function(){
+ console.log("aman2");
+});
 	
 function highlight(elem) {
 	document.getElementById('details-overlay').className = 'record-view record-view--visible';
-	$(".rig-cell, .image-tag, .rig-img, .movie-name, .movie-year").click(function(){
-	 console.log("aman");
-	});
 	
 	console.log(elem.querySelector('.json').textContent);
     //elem.style.backgroundColor='yellow'
