--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ function closeNav() {
 }
 	
 function highlight(elem) {
-	document.getElementById('details-overlay').className = 'record-view record-view--visible';
+	//document.getElementById('details-overlay').className = 'record-view record-view--visible';
 	
 	console.log(elem.querySelector('.json').textContent);
     //elem.style.backgroundColor='yellow'
