--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <!-- movie details -->
 <div id="myNav" class="overlay">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <img src="https://wp23-images-nl-dynamic.horizon.tv/Posters/28713999-8ab8-4b79-a69d-d3165137aecd-boxcover.jpg" class="rig-img">
+    <img src="https://wp23-images-nl-dynamic.horizon.tv/Posters/28713999-8ab8-4b79-a69d-d3165137aecd-boxcover.jpg" class="details-image">
   <div class="overlay-content">
     <a href="#">About</a>
     <a href="#">Services</a>
