--- a/index.html
+++ b/index.html
@@ -188,6 +188,24 @@
 	      </g>
 	  </svg>
      </div>
+	<!-- movie details div -->
+	<div class="movie-details">
+        <span>My movie name</span>
+        <span>duration : </span>
+        <span>Genre : </span>
+        <span>Star Cast :</span>
+        <div>
+  	     <ul>
+	      <li>start 1</li>
+	      <li>start 2</li>
+	      <li>start 3</li>
+	      <li>start 4</li>
+	      <li>start 5</li>
+    	     </ul>
+        </div>
+        <p>my movie description long descriotion goes here........ lot of information... two lines , or 3 lines. my movie description long descriotion goes here........ lot of information... two lines , or 3 lines</p>
+    </div>
+	
 	<div class="overlay-content">
     <a href="#">About</a>
     <a href="#">Services</a>
