--- a/index.html
+++ b/index.html
@@ -163,8 +163,9 @@
 <!-- movie details -->
 <div id="myNav" class="overlay">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <img src="https://wp23-images-nl-dynamic.horizon.tv/Posters/28713999-8ab8-4b79-a69d-d3165137aecd-boxcover.jpg" class="details-image">
-    <div class="add-to-favourite"> Add to watchlist
+    <div class="add-to-favourite">
+	   <img src="https://wp23-images-nl-dynamic.horizon.tv/Posters/28713999-8ab8-4b79-a69d-d3165137aecd-boxcover.jpg" class="details-image">
+	   <div>Add to watchlist</div>
            <svg height="0" width="0" style="position:absolute;margin-left: -100%;">
             <path id="heart-icon" d="M16,28.261c0,0-14-7.926-14-17.046c0-9.356,13.159-10.399,14-0.454c1.011-9.938,14-8.903,14,0.454
 	      C30,20.335,16,28.261,16,28.261z"></path>
