--- a/index.html
+++ b/index.html
@@ -165,7 +165,13 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <div class="add-to-favourite">
 	   <img src="https://wp23-images-nl-dynamic.horizon.tv/Posters/28713999-8ab8-4b79-a69d-d3165137aecd-boxcover.jpg" class="details-image">
-	   <div>Add to watchlist</div>
+	   <div>Add to watchlist
+		    <svg class="icon is-check" viewBox="0 0 32 32" style="height: 35px;width: 35px;fill: orange;vertical-align: bottom;">
+		      <g filter="url(#inset-shadow)">
+			 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#heart-icon"></use>
+		      </g>
+		  </svg>
+	    </div>
            <svg height="0" width="0" style="position:absolute;margin-left: -100%;">
             <path id="heart-icon" d="M16,28.261c0,0-14-7.926-14-17.046c0-9.356,13.159-10.399,14-0.454c1.011-9.938,14-8.903,14,0.454
 	      C30,20.335,16,28.261,16,28.261z"></path>
@@ -183,11 +189,7 @@
 		    <feComposite operator="over" in="shadow" in2="SourceGraphic"></feComposite>
 		</filter>
           </svg>
-	  <svg class="icon is-check" viewBox="0 0 32 32" style="height: 35px;width: 35px;fill: orange;vertical-align: bottom;">
-	      <g filter="url(#inset-shadow)">
-		 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#heart-icon"></use>
-	      </g>
-	  </svg>
+	  
      </div>
 	<!-- movie details div -->
 	<div class="movie-details">
