--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <div class="add-to-favourite">
 	   <img src="https://wp23-images-nl-dynamic.horizon.tv/Posters/28713999-8ab8-4b79-a69d-d3165137aecd-boxcover.jpg" class="details-image">
 	   <div>Add to watchlist
-		    <svg class="icon is-check" viewBox="0 0 32 32" style="height: 35px;width: 35px;fill: orange;vertical-align: bottom;">
+		    <svg class="svg-icon is-check" viewBox="0 0 32 32">
 		      <g filter="url(#inset-shadow)">
 			 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#heart-icon"></use>
 		      </g>
