--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <ul id="rig" class="main" hidden>
     <li class="card" style="width: 100%;">
-        <a class="rig-cell" href="#" style="box-shadow: none; float: left; padding: 0px; ">
+        <a class="rig-cell" href="/pwa-sample/movies.html" style="box-shadow: none; float: left; padding: 0px; ">
                <h3 class="movie-name" style=" font-weight: 600; ">Myprime Movies</h3>
         </a>
     </li>
