--- a/movies.html
+++ b/movies.html
@@ -41,6 +41,7 @@
     <li class="card cardTemplate" hidden>
         <a class="rig-cell" href="#">
           <div class="city-key" hidden></div>
+	  <div class="json" hidden></div>
           <span class="image-tag"></span>
           <h3 class="movie-name">Responsive Grid</h3>
           <div class="movie-year">HORROR, 2008</div>
