--- a/movies.html
+++ b/movies.html
@@ -39,7 +39,7 @@
 
   <ul id="rig" class="main" hidden>
     <li class="card cardTemplate" hidden>
-        <a class="rig-cell" href="#">
+        <a class="rig-cell" href="#" onclick="highlight(this)">
           <div class="city-key" hidden></div>
 	  <div class="json" hidden></div>
           <span class="image-tag"></span>
@@ -83,5 +83,28 @@
 </section>
     
 <script src="app.js"></script>
+<script>
+function openNav() {
+    document.getElementById("myNav").style.width = "100%";
+}
+function closeNav() {
+    document.getElementById("myNav").style.width = "0%";
+}
+	
+function highlight(elem) {	
+	var myObj = JSON.parse(elem.querySelector('.json').textContent);
+	var card = document.getElementById("myNav");
+	card.querySelector('.details-image').src = myObj.images;
+        card.querySelector('.movie-name').textContent = myObj.title;
+	card.querySelector('.movie-time').textContent = "Duration : "+(myObj.duration/60).toFixed(2) +" min";
+	card.querySelector('.movie-genre').textContent = "Genre : "+myObj.categories[0].title;
+	var cast = "";
+	myObj.cast.forEach(function(item){
+    		cast += item+", ";
+	});
+	card.querySelector('.movie-cast').textContent = "CAST & CREW : "+cast;
+	card.querySelector('.movie-description').textContent = myObj.longDescription;
+	openNav();
+}
 </body>
 </html>
