--- a/movies.html
+++ b/movies.html
@@ -106,5 +106,6 @@ function highlight(elem) {
 	card.querySelector('.movie-description').textContent = myObj.longDescription;
 	openNav();
 }
+</script>
 </body>
 </html>
