--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <div class="add-to-favourite">
 	   <img src="https://wp23-images-nl-dynamic.horizon.tv/Posters/28713999-8ab8-4b79-a69d-d3165137aecd-boxcover.jpg" class="details-image">
-	   <div>Add to watchlist
+	   <div onclick="addToWatchlist()">Add to watchlist
 		    <svg class="svg-icon is-check" viewBox="0 0 32 32">
 		      <g filter="url(#inset-shadow)">
 			 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#heart-icon"></use>
@@ -209,7 +209,7 @@
 <script>
 $(".rig-img").click(function(){
  //openNav();
- console.log("aman1");
+ //console.log("aman1");
 });
 function openNav() {
     document.getElementById("myNav").style.width = "100%";
@@ -219,6 +219,13 @@ function closeNav() {
     document.getElementById("myNav").style.width = "0%";
 }
 	
+function addToWatchlist(elem){
+	console.log('function');
+	caches.open("watchlist").then(function(cache) {
+		console.log('cache function');
+	  cache.put(event.request, response);
+	});
+}
 function highlight(elem) {
 	//document.getElementById('details-overlay').className = 'record-view record-view--visible';
 	
