--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ function addToWatchlist(elem){
 	console.log('function');
 	caches.open("watchlist").then(function(cache) {
 		console.log('cache function');
-	  cache.put(event.request, response);
+	  cache.put(elem);
 	});
 }
 function highlight(elem) {
