--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <div class="add-to-favourite">
 	   <img src="https://wp23-images-nl-dynamic.horizon.tv/Posters/28713999-8ab8-4b79-a69d-d3165137aecd-boxcover.jpg" class="details-image">
-	   <div onclick="addToWatchlist(this)">Add to watchlist
+	   <div id="watchList-link">Add to watchlist
 		   <span class="movie-json" hidden></span>
 		    <svg class="svg-icon is-check" viewBox="0 0 32 32">
 		      <g filter="url(#inset-shadow)">
@@ -233,15 +233,15 @@ document.addEventListener("DOMContentLoaded", function(){
         }
     }
 },false);
-	
-function addtoWatchList(elem) {
-    var myObj = JSON.parse(elem.querySelector('.movie-json').textContent);
+
+$("#watchList-link").click(function(){
+    var myObj = JSON.parse(document.querySelector('.movie-json').textContent);
     console.log("About to add "+myObj);
     var transaction = db.transaction(["watchList"],"readwrite");
     var store = transaction.objectStore("watchList");
     //Perform the add
     var request = store.add(myObj);
- 
+	
     request.onerror = function(e) {
         console.log("Error",e.target.error.name);
         //some type of error handler
@@ -250,11 +250,6 @@ function addtoWatchList(elem) {
     request.onsuccess = function(e) {
         console.log("Woot! Did it");
     }
-}
-	
-$(".rig-img").click(function(){
- //openNav();
- //console.log("aman1");
 });
 function openNav() {
     document.getElementById("myNav").style.width = "100%";
