--- a/movies.html
+++ b/movies.html
@@ -123,6 +123,7 @@
         <p class="movie-description">my movie description long descriotion goes here........ lot of information... two lines , or 3 lines. my movie description long descriotion goes here........ lot of information... two lines , or 3 lines</p>
     </div>
 </div>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
