--- a/watch-list.html
+++ b/watch-list.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PWA</title>
+  <title>My Favorite</title>
   <link rel="manifest" href="manifest.json">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -13,12 +13,8 @@
   <meta name="msapplication-TileImage" content="images/logo.png">
   <meta name="msapplication-TileColor" content="#2F3BA2">
   <link rel="stylesheet" type="text/css" href="grid.css">
-  <style>
-    
-  </style>
 </head>
 <body>
-
   <header>
     <div class="header-wrapper">
       <div class="header-title">
