--- a/watch-list.html
+++ b/watch-list.html
@@ -34,7 +34,7 @@
   </header>
 
   <ul id="rig" class="main" hidden>
-    <li class="card cardTemplate" hidden>
+    <li class="card favoriteTemplate" hidden>
         <a class="rig-cell" href="#" onclick="highlight(this)">
           <div class="city-key" hidden></div>
 	  <div class="json" hidden></div>
