--- a/watch-list.html
+++ b/watch-list.html
@@ -121,5 +121,10 @@
 </div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
 <script src="app.js"></script>
+<script>
+$(function() {
+    console.log( "ready! aman" );
+});
+</script>
 </body>
 </html>
