--- a/watch-list.html
+++ b/watch-list.html
@@ -125,6 +125,11 @@
 $(function() {
     console.log( "ready! aman" );
 });
+document.addEventListener("DOMContentLoaded", function(){
+    console.log( "ready! aman aman deep" );
+},false);
+
+	
 </script>
 </body>
 </html>
