--- a/watch-list.html
+++ b/watch-list.html
@@ -123,10 +123,10 @@
 <script src="app.js"></script>
 <script>
 $(function() {
-    console.log( "ready! aman" );
+    console.log( "ready! aman"+idbSupported );
 });
 document.addEventListener("DOMContentLoaded", function(){
-    console.log( "ready! aman aman deep" );
+    console.log( "ready! aman aman deep"+idbSupported );
 },false);
 
 	
