--- a/movies.html
+++ b/movies.html
@@ -78,7 +78,7 @@
 		<div class="record-view__panel-mic">
 			<img src="/pwa-sample/favicon.ico" alt="Home" style="height: 50px;margin-left: 41%;">
 		</div>
-        	<button tabindex="-1" class="record-view__record-cancel-btn js-record-cancel-btn">Cancel</button>
+        	click on "Add to Home" from your browser options 
 	</div>
 </section>
 <!-- movie details -->
@@ -86,9 +86,17 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <div class="add-to-favourite">
 	   <img src="https://wp23-images-nl-dynamic.horizon.tv/Posters/28713999-8ab8-4b79-a69d-d3165137aecd-boxcover.jpg" class="details-image">
-	   <div id="watchList-link">Add to watchlist
+	   <div id="watchList-link">Add to favorite
 		   <span class="movie-json" hidden></span>
 		    <svg class="svg-icon is-check" viewBox="0 0 32 32">
+		      <g filter="url(#inset-shadow)">
+			 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#heart-icon"></use>
+		      </g>
+		  </svg>
+	    </div>
+	    <div id="watchList-link-added" class="watchList-link-added">Favorite
+		   <span class="movie-json" hidden></span>
+		    <svg class="svg-icon-added is-check" viewBox="0 0 32 32">
 		      <g filter="url(#inset-shadow)">
 			 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#heart-icon"></use>
 		      </g>
@@ -110,8 +118,7 @@
 		    <!-- Placing shadow over element -->
 		    <feComposite operator="over" in="shadow" in2="SourceGraphic"></feComposite>
 		</filter>
-          </svg>
-	  
+	    </svg>
      </div>
 	<!-- movie details div -->
 	<div class="movie-details">
