--- a/movies.html
+++ b/movies.html
@@ -94,7 +94,7 @@
 		      </g>
 		  </svg>
 	    </div>
-	    <div id="watchList-link-added" class="watchlist-hide">Favorite
+	    <div id="watchList-link-added" class="watchlist-hide">Remove favorite
 		   <span class="movie-json" hidden></span>
 		    <svg class="svg-icon is-check" viewBox="0 0 32 32">
 		      <g filter="url(#inset-shadow)">
