--- a/watch-list.html
+++ b/watch-list.html
@@ -82,8 +82,15 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <div class="add-to-favourite">
 	   <img src="https://wp23-images-nl-dynamic.horizon.tv/Posters/28713999-8ab8-4b79-a69d-d3165137aecd-boxcover.jpg" class="details-image">
-	   <div id="watchList-link">Add to watchlist
+	   <div id="watchList-link" class="watchList-link-added">Add to favorite
 		   <span class="movie-json" hidden></span>
+		    <svg class="svg-icon-added is-check" viewBox="0 0 32 32">
+		      <g filter="url(#inset-shadow)">
+			 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#heart-icon"></use>
+		      </g>
+		  </svg>
+	    </div>
+	    <div id="watchList-link-added" class="watchlist-hide">Remove favorite
 		    <svg class="svg-icon is-check" viewBox="0 0 32 32">
 		      <g filter="url(#inset-shadow)">
 			 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#heart-icon"></use>
