--- a/movies.html
+++ b/movies.html
@@ -9,8 +9,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="PWA">
-  <link rel="apple-touch-icon" href="images/logo.png">
-  <meta name="msapplication-TileImage" content="images/logo.png">
+  <link rel="apple-touch-icon" href="/pwa-sample/ziggo_logo.png">
+  <meta name="msapplication-TileImage" content="/pwa-sample/ziggo_logo.png">
   <meta name="msapplication-TileColor" content="#2F3BA2">
   <link rel="stylesheet" type="text/css" href="grid.css">
   <style>
@@ -22,7 +22,7 @@
   <header>
     <div class="header-wrapper">
       <div class="header-title">
-          <a class="logo" href="/pwa-sample">
+          <a class="logo" href="/pwa-sample/">
             <img src="/pwa-sample/ziggo_logo.png" alt="Home" style="height: 30px;">
           </a>
           <nav class="nav-icon">
